@@ -9,6 +9,7 @@ struct SPVM_use {
   int32_t is_require;
   int32_t is_allow;
   int32_t load_fail;
+  const char* file;
 };
 
 SPVM_USE* SPVM_USE_new(SPVM_COMPILER* compiler);
