@@ -1,7 +1,0 @@
-use strict;
-use warnings;
-
-use SPVM::Builder::Config;
-my $bconf = SPVM::Builder::Config->new_c99;
-
-$bconf;
