@@ -1,11 +1,0 @@
-package SPVM::Time::tm_9i : value_t {
-  has tm_sec : int;
-  has tm_min : int;
-  has tm_hour : int;
-  has tm_mday : int;
-  has tm_mon : int;
-  has tm_year : int;
-  has tm_wday : int;
-  has tm_yday : int;
-  has tm_isdst : int;
-}
