@@ -19,6 +19,7 @@ use lib "$FindBin::Bin/default/lib";
   mkpath $exe_dir;
   
   my $spvmcc_cmd = "$^X -Mblib blib/script/spvmcc -B t/exe/spvm_build -I t/default/lib -o t/spvm_build/work/exe/myexe TestCase::MyExe";
+  
   system($spvmcc_cmd) == 0
     or die "Can't execute command $spvmcc_cmd:$!";
 
